cilium-cli/connectivity/builder/manifests/client-egress-to-echo-service-account-port-range-ccnp.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: client-egress-to-echo-service-account-port-range-ccnp
spec:
  description: "Allow client to port range endpoint with service account label"
  endpointSelector:
    matchLabels:
      kind: client
  egress:
  - toPorts:
    - ports:
      - port: "4096"
        endPort: 8191
        protocol: TCP
    toEndpoints:
    - matchLabels:
        io.cilium.k8s.policy.serviceaccount: echo-same-node
